fix: top alignment of article with toc
Ensure that on desktop viewports the top element in the article lines up with the heading of the "Jump to section" component.

fix #1732

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -22,8 +22,13 @@
   }
 }
 
+/* override rule from reset as it does not work for MDN */
+article > * + * {
+  margin-top: inherit;
+}
+
 .article {
-  padding: $base-spacing;
+  padding: ($base-spacing / 2) $base-spacing $base-spacing;
 
   @media #{$mq-small-desktop-and-up} {
     margin-bottom: $large-spacing;
